--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Grant write permissions to contents
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
